[gd_scene load_steps=5 format=3 uid="uid://c75mn6c4kcy72"]

[ext_resource type="Script" path="res://scripts/battle.gd" id="1_o5j4i"]
[ext_resource type="PackedScene" uid="uid://d1dreux08gbt" path="res://nodes/characters/Player.tscn" id="2_a6fra"]
[ext_resource type="PackedScene" uid="uid://di45s8k4r18g4" path="res://nodes/restart_menu.tscn" id="2_leiyv"]
[ext_resource type="PackedScene" uid="uid://bcaie6x0r2o7p" path="res://nodes/characters/bot.tscn" id="3_j1cia"]

[node name="Battle" type="Node2D"]
script = ExtResource("1_o5j4i")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="RestartMenu" parent="CanvasLayer" instance=ExtResource("2_leiyv")]
current_scene = "res://scenes/battle.tscn"
metadata/_edit_lock_ = true

[node name="Player" parent="." instance=ExtResource("2_a6fra")]
position = Vector2(223, 364)

[node name="Bot" parent="." instance=ExtResource("3_j1cia")]
position = Vector2(943, 378)

[node name="TimeLeftLabel" type="Label" parent="."]
offset_left = 482.0
offset_top = 239.0
offset_right = 538.0
offset_bottom = 265.0
scale = Vector2(3.19559, 3.19559)
text = "TimeLeft"

[node name="TimeControl" type="Timer" parent="."]
one_shot = true

[node name="ResolveTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="TimeControl" to="." method="_on_time_control_timeout"]
[connection signal="timeout" from="ResolveTimer" to="." method="_on_resolve_timer_timeout"]
